<resources>
    <string name="app_name">Teclado_GridLayout</string>
    <string name="btnDivision">/</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnMultiplicacion">*</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnResta">-</string>
    <string name="btnSuma">+</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btn00">00</string>
    <string name="btnIgual">=</string>
</resources>