<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <Button
        android:text="@string/btnDivision"
        android:layout_column="3"/>

    <Button
        android:text="@string/btn1"/>

    <Button
        android:text="@string/btn2"/>

    <Button
        android:text="@string/btn3"/>

    <Button
        android:text="@string/btnMultiplicacion"/>

    <Button
        android:text="@string/btn4"/>

    <Button
        android:text="@string/btn5"/>

    <Button
        android:text="@string/btn6"/>

    <Button
        android:text="@string/btnResta"/>

    <Button
        android:text="@string/btnSuma"
        android:layout_column="3"
        android:layout_rowSpan="4"
        android:layout_gravity="fill_vertical"/>

    <Button
        android:text="@string/btn7"/>

    <Button
        android:text="@string/btn8"/>

    <Button
        android:text="@string/btn9"/>

    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/btn0"/>

    <Button
        android:text="@string/btn00"/>

    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:text="@string/btnIgual"/>

</GridLayout>
